# web_mcp

./: .env.example  .gitignore  COMPLETION_REPORT.md  DEPLOYMENT.md  deploy.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_seo.py
app/: database.py  middleware.py  models.py  schemas.py
app/routers/: tools.py
app/routers/seo/: __init__.py  router.py
deploy/: gunicorn.conf.py  nginx.conf  setup-gunicorn.sh  setup-nginx.sh  supervisor.conf
scripts/: init_db.py  migrate.py  seed_data.py
static/: robots.txt
templates/: 404.html  base.html  index.html
templates/tools/: detail.html  index.html
tests/: __init__.py  test_main.py
